# zuckky_ai

./: .gitignore  manage.py  pyproject.toml  render.yaml  requirements.txt
static/css/: style.css
static/js/: app.js
templates/: base.html  editor.html
zuckky_ai/: asgi.py  settings.py  urls.py  wsgi.py
zuckkyai_app/: apps.py  urls.py  views.py
zuckkyai_app/utils/: gemini_client.py  video_processor.py
