[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zuckky-ai"
version = "0.1.0"
dependencies = [
    "Django==5.2.8",
    "gunicorn==23.0.0", 
    "whitenoise==6.11.0",
    "dj-database-url==3.0.1",
    "psycopg2-binary==2.9.11",
    "google-generativeai==0.8.5",
    "Pillow==10.0.1",
]